--- a/src/app/shared/scoreboards/admin-forms/events-forms/football-events-play-type-buttons/football-events-play-type-buttons.component.html
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/football-events-play-type-buttons/football-events-play-type-buttons.component.html
@@ -1,23 +1,87 @@
 @if (control && eventsArray && i !== null && i !== undefined) {
-  <div class="event-hash-direction-buttons-two-col">
-    <span style="grid-column: span 2; text-align: center" class="tui-text_body-s">PLAY TYPE</span>
-    <app-toggle-button
-      [eventsArray]="eventsArray"
-      [index]="i"
-      [control]="control"
-      [buttonValue]="IFootballPlayType.Run"
-      [label]="IFootballPlayType.Run"
-      [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
-      (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
-    ></app-toggle-button>
-    <app-toggle-button
-      [eventsArray]="eventsArray"
-      [index]="i"
-      [control]="control"
-      [buttonValue]="IFootballPlayType.Pass"
-      [label]="IFootballPlayType.Pass"
-      [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
-      (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
-    ></app-toggle-button>
-  </div>
+  @if (isPreviousScoreTdOrDefenceTd(eventsArray, i)) {
+    <div class="event-hash-direction-buttons-two-col">
+      <span style="grid-column: span 2; text-align: center" class="tui-text_body-s">PLAY TYPE</span>
+      <app-toggle-button
+        [eventsArray]="eventsArray"
+        [index]="i"
+        [control]="control"
+        [buttonValue]="IFootballPlayType.PatOne"
+        [label]="IFootballPlayType.PatOne"
+        [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
+        (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
+      ></app-toggle-button>
+      <app-toggle-button
+        [eventsArray]="eventsArray"
+        [index]="i"
+        [control]="control"
+        [buttonValue]="IFootballPlayType.PatTwo"
+        [label]="IFootballPlayType.PatTwo"
+        [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
+        (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
+      ></app-toggle-button>
+    </div>
+  } @else if (isFourthDown(eventsArray, i)) {
+    <div class="event-hash-direction-buttons-four-col">
+      <span style="grid-column: span 4; text-align: center" class="tui-text_body-s">PLAY TYPE</span>
+      <app-toggle-button
+        [eventsArray]="eventsArray"
+        [index]="i"
+        [control]="control"
+        [buttonValue]="IFootballPlayType.Run"
+        [label]="IFootballPlayType.Run"
+        [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
+        (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
+      ></app-toggle-button>
+      <app-toggle-button
+        [eventsArray]="eventsArray"
+        [index]="i"
+        [control]="control"
+        [buttonValue]="IFootballPlayType.Pass"
+        [label]="IFootballPlayType.Pass"
+        [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
+        (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
+      ></app-toggle-button>
+      <app-toggle-button
+        [eventsArray]="eventsArray"
+        [index]="i"
+        [control]="control"
+        [buttonValue]="IFootballPlayType.Punt"
+        [label]="IFootballPlayType.Punt"
+        [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
+        (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
+      ></app-toggle-button>
+      <app-toggle-button
+        [eventsArray]="eventsArray"
+        [index]="i"
+        [control]="control"
+        [buttonValue]="IFootballPlayType.Kick"
+        [label]="IFootballPlayType.Kick"
+        [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
+        (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
+      ></app-toggle-button>
+    </div>
+  } @else {
+    <div class="event-hash-direction-buttons-two-col">
+      <span style="grid-column: span 2; text-align: center" class="tui-text_body-s">PLAY TYPE</span>
+      <app-toggle-button
+        [eventsArray]="eventsArray"
+        [index]="i"
+        [control]="control"
+        [buttonValue]="IFootballPlayType.Run"
+        [label]="IFootballPlayType.Run"
+        [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
+        (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
+      ></app-toggle-button>
+      <app-toggle-button
+        [eventsArray]="eventsArray"
+        [index]="i"
+        [control]="control"
+        [buttonValue]="IFootballPlayType.Pass"
+        [label]="IFootballPlayType.Pass"
+        [currentEnumValue]="getEventPlayType(eventsArray, i)?.toString()"
+        (toggle)="toggleFootballEnumValue($event, eventsArray, i, 'playType')"
+      ></app-toggle-button>
+    </div>
+  }
 }
