--- a/src/app/shared/scoreboards/admin-forms/events-forms/football-events-play-result-buttons/football-events-play-result-buttons.component.less
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/football-events-play-result-buttons/football-events-play-result-buttons.component.less
@@ -17,3 +17,14 @@
   align-items: center;
   //padding: 10px;
 }
+
+//.event-hash-direction-buttons-two-rows-four-col {
+//  display: grid;
+//  grid-template-columns: auto auto;
+//  grid-template-rows: auto auto;
+//  grid-gap: 10px;
+//  justify-content: stretch;
+//  align-items: center;
+//  //padding: 10px;
+//}
+
