--- a/src/app/shared/scoreboards/admin-forms/events-forms/football-events-play-type-buttons/football-events-play-type-buttons.component.less
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/football-events-play-type-buttons/football-events-play-type-buttons.component.less
@@ -7,3 +7,13 @@
   align-items: center;
   //padding: 10px;
 }
+
+.event-hash-direction-buttons-four-col {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto;
+  grid-gap: 10px;
+  justify-content: stretch;
+  align-items: center;
+  //padding: 10px;
+}
