football events playresult and playtype buttons on mobile

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -340,7 +340,7 @@
                       [eventsArray]="eventsArray"
                       [i]="i"
                     ></app-football-events-play-result-buttons>
-                    @if (!isKickOffPlay(eventsArray, i)) {
+                    @if (!isKickOffPlay(eventsArray, i) && !isPassPlay(eventsArray, i) && !isRunPlay(eventsArray, i)) {
                       <app-select-list-of-strings
                         [control]="control"
                         [placeholder]="'play result'"
