--- a/src/app/shared/scoreboards/admin-forms/events-forms/football-events-play-result-buttons/football-events-play-result-buttons.component.less
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/football-events-play-result-buttons/football-events-play-result-buttons.component.less
@@ -18,6 +18,16 @@
   //padding: 10px;
 }
 
+.event-hash-direction-buttons-three-col-three-rows {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto;
+  grid-gap: 10px;
+  justify-content: stretch;
+  align-items: center;
+  //padding: 10px;
+}
+
 //.event-hash-direction-buttons-two-rows-four-col {
 //  display: grid;
 //  grid-template-columns: auto auto;
