--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -155,7 +155,7 @@
                 </div>
               </div>
 
-              <!--BALL ON & BALL MOVED-->
+              <!--BALL ON-->
               @if (getBallOnFormControl(this.eventForm, this.arrayName, i); as control) {
                 <div class="event-table-cell"
                      [style.background-color]="isMaxCautionColor(noBallOnIsSelected(eventsArray, i))">
@@ -452,16 +452,22 @@
               <!--EVENT BALL MOVED-->
               @if (getBallMovedOnFormControl(this.eventForm, this.arrayName, i); as control) {
                 @if (getEventPlayType(eventsArray, i) === IFootballPlayType.Pass || getEventPlayType(eventsArray, i) === IFootballPlayType.Run || getEventPlayResult(eventsArray, i) === IFootballPlayResult.Flag) {
-                  <div class="event-table-cell"
-                       [style.background-color]="isCautionColor(noBallMovedIsSelected(eventsArray, i))">
+                  <div class="event-ballon-distance">
                     @if (match.match_data?.field_length; as fieldLength) {
-                      <app-input-numbers-with-increment-buttons
-                        [label]="'Ball Moved'"
-                        [control]="control"
-                        [min]="-((fieldLength / 2) - 1)"
-                        [max]="fieldLength / 2"
-                        (incrementEvent)="incrementBallOnPosition(getEventBallMovedOn(eventsArray, i), $event, control, eventsArray, i, fieldLength, eventBallMovedOnKey)"
-                      ></app-input-numbers-with-increment-buttons>
+                      <div class="event-table-cell"
+                           [style.background-color]="isCautionColor(noBallMovedIsSelected(eventsArray, i))">
+
+                        <app-input-numbers-with-increment-buttons
+                          [label]="'Ball Moved'"
+                          [control]="control"
+                          [min]="-((fieldLength / 2) - 1)"
+                          [max]="fieldLength / 2"
+                          (incrementEvent)="incrementBallOnPosition(getEventBallMovedOn(eventsArray, i), $event, control, eventsArray, i, fieldLength, eventBallMovedOnKey)"
+                        ></app-input-numbers-with-increment-buttons>
+
+                      </div>
+                      <span
+                        class="tui-text_h6">Dist: {{ computeDistance(getEventBallMovedOn(eventsArray, i), getEventBallOn(eventsArray, i), fieldLength / 2) }}</span>
                     }
                   </div>
                 }
@@ -955,6 +961,10 @@
                 [action]="'add event'"
                 (onAdd)="addNewEvent()"
               ></app-add-button-on-final-tr>
+              <app-add-button-on-final-tr
+                [action]="'add flag event'"
+                (onAdd)="addNewEvent('flag')"
+              ></app-add-button-on-final-tr>
             </div>
           }
         }
@@ -965,6 +975,10 @@
       <div class="table-row final">
         <app-add-button-on-final-tr
           (onAdd)="addNewEvent()"
+        ></app-add-button-on-final-tr>
+        <app-add-button-on-final-tr
+          [action]="'add flag event'"
+          (onAdd)="addNewEvent('flag')"
         ></app-add-button-on-final-tr>
       </div>
     }
