football events playresult and playtype buttons on mobile added distance count added flag event

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -961,10 +961,10 @@
                 [action]="'add event'"
                 (onAdd)="addNewEvent()"
               ></app-add-button-on-final-tr>
-              <app-add-button-on-final-tr
-                [action]="'add flag event'"
-                (onAdd)="addNewEvent('flag')"
-              ></app-add-button-on-final-tr>
+              <!--              <app-add-button-on-final-tr-->
+              <!--                [action]="'add flag event'"-->
+              <!--                (onAdd)="addNewEvent('flag')"-->
+              <!--              ></app-add-button-on-final-tr>-->
             </div>
           }
         }
@@ -976,10 +976,10 @@
         <app-add-button-on-final-tr
           (onAdd)="addNewEvent()"
         ></app-add-button-on-final-tr>
-        <app-add-button-on-final-tr
-          [action]="'add flag event'"
-          (onAdd)="addNewEvent('flag')"
-        ></app-add-button-on-final-tr>
+        <!--        <app-add-button-on-final-tr-->
+        <!--          [action]="'add flag event'"-->
+        <!--          (onAdd)="addNewEvent('flag')"-->
+        <!--        ></app-add-button-on-final-tr>-->
       </div>
     }
   </form>
